# rustProjects

./: .gitignore  README.md
apigateway/: .http  Cargo.toml  Makefile  README.md
apigateway/migrations/2025-10-15-061022-0000_create_rustaceans/: up.sql
apigateway/src/: main.rs  main1.rs  main2.rs  main3.rs  main5.rs  main6.rs  main7.rs  main8.rs  utils.rs
apigateway/src/rustaceans/: model.rs  repository.rs
backend_first_try/: Cargo.toml  README.md  test_backend.rest
backend_first_try/docker/: Dockerfile  README.md  docker-compose.yaml
backend_first_try/src/: errors.rs  main.rs  models.rs
backend_first_try/src/db/: database.rs
backend_first_try/src/errors/: sushi_error.rs
backend_first_try/src/models/: sushi.rs
clean_archi/dip/: README.md
command_line/: Cargo.toml
command_line/src/: main.rs
cr8s/: .http  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yaml  rustfmt.toml
cr8s/.cargo/: config.toml
cr8s/src/: _.rs  main.rs  main4.rs  model.rs
design_pattern/: README.md
design_pattern/src/: factory_method.rs  main.rs
hello_world/src/: giga_second.rs  main.rs
helloworld/: .gitignore  Cargo.toml
helloworld/src/: dataframe.rs  main.rs
http_server/docs/: README.md  about_http.md
network/src/: main.rs  single_thread_server.rs
playground/excel/: Cargo.toml
playground/hello_world/: Cargo.toml  README.md
playground/io/: Cargo.toml  README.md
playground/src/: learn_traits.rs  main.rs
rust_tutorial/: Cargo.toml
rust_tutorial/src/: main.rs  random.rs  struct_and_enum.rs
src/: main.rs  module.rs
(+52 files in other folders)
