[package]
name = "helloworld"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
polars = { version = "0.28.0", features = ["describe", "lazy", "object", "strings", "dtype-categorical", "list_eval", "rows", "round_series", "dtype-full", "rank"] }
polars-io = "0.28.0"
native-dialog = "0.6.3"
glob = "0.3.1"